# real-time-price-predictor

./: README.md
docker-compose/: redpanda.yml
services/trade_producer/: Dockerfile  Makefile  pyproject.toml
services/trade_producer/src/: kraken_api.py  main.py
